2016-04-20  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c (usb_lld_reset): Supply FEATURE
	argument.  Call usb_lld_set_configuration internally and set
	FEATURE.
	(usb_lld_set_feature): Remove.
	* example-cdc/usb-cdc.c (usb_cb_device_reset): Update with new
	API.

	* example-cdc/sys.c: Include clk_gpio_init-stm32.c.
	* example-led/sys.c, example-primer2/sys.c: Ditto.

2016-04-19  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/sample.c (main): Change the example to display
	CRC32 value from input line.

2016-04-18  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48: New directory for FS-BB48.

	* clk_gpio_init-kl.c: New.
	* clk_gpio_init-stm32.c: Rename from clk_gpio_init.c.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/sys.c: Update for non-SVC Chopstx.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Update.

	* example-cdc/usb_stm32f103.c (usb_handle_transfer): Don't use
	weak symbols for callbacks, but use explicit callbacks of
	usb_cb_tx_done and usb_cb_rx_ready.

	* example-cdc/usb_lld.h (usb_cb_tx_done, usb_cb_rx_ready): New
	callbacks.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_cpu_sched_lock, chx_cpu_sched_unlock): Use SVC
	for Cortex-M3, because of ICI/IT of ESPR.
	(chx_sched): Invoke svc for Cortex-M3.
	(preempt, svc): Change back for Cortex-M3.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c (vector_table): Since IDLE thread runs with PSP now, use
	different value for MSP.

	* chopstx.c (chx_sched): Push LR value to PC slot on stack, so
	that it returns directly to caller.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct chx_pq): New struct for priority queue.
	(struct chx_px): New struct for proxy.
	(struct chx_thread): New member FLAG_IS_PROXY.
	(ll_dequeue, ll_insert, ll_pop, ll_prio_push, ll_prio_enqueue)
	Change API.
	(THREAD_WAIT_POLL): New thread status.
	(chx_ready_pop, chx_ready_push, chx_ready_enqueue): Type coercion.